This is phplotdocs/ChangeLog, listing changes to the PHPlot Reference Manual
-----------------------------------------------------------------------------
Note: This is a more complete ChangeLog than the one in Appendix A of the
manual, which only contains summaries of changes.
-----------------------------------------------------------------------------
2012-01-02
   * advanced.xml: Clarify OHLC tuning parameters. Fix typo in pie tuning.
   * reference.xml: In SetPieAutoSize(), add note and link on minimum size.
     In SetPieLabelType(), add link to example of pie label types.

2012-01-01
   * main.xml: Updated copyright year to 2012.

2011-12-31
   * examples/pielabeltypedata.php: Changed the data file used by the pie
     label type examples to remove the 2 smallest data values. This avoids
     the round-off problem in bug #3467793 with tiny sectors. (The smaller
     of the two was displayed, and the larger was not, due to the way the
     values are rounded off.) The bug will be addressed, but in the meantime
     the manual will have clean examples.

   * reference.xml: GetCallback(), RemoveCallback(), SetCallback() - rewrite
     note and add History so it doesn't sound like callbacks are still an
     experimental feature.

   * advanced.xml: Fix note, draw_border callback is now called for pie charts.

2011-12-30
   For bug report #3403297 "Pie chart sizing and label issues":
   * Makefile: Add files for new pielabeltype example.
   * advanced.xml: Note pie charts have no world coordinates.  New section on
     tuning pie charts with 2 new variables.
   * concepts.xml: Note pie charts have no world coordinates.  Fix 'pie
     percentage labels', since labels need not show percentage now.  In
     "Plot Type: pie", link to new function SetPieLabelType(). Add note that
     segments less than 1 degree are not plotted. New subsection on pie labels.
   * developer.xml: Document new internals CheckPieLabels(), DrawPieLabel(),